--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,29 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-analytics.js";
+    import { getFirestore } from 'firebase/firestore';
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBMokBP5Fr6bxPF2oADzxQUvsW2WbbfHUU",
+      authDomain: "snakegame-a1bc3.firebaseapp.com",
+      projectId: "snakegame-a1bc3",
+      storageBucket: "snakegame-a1bc3.appspot.com",
+      messagingSenderId: "747081055416",
+      appId: "1:747081055416:web:68b5087cc8c5026d65c84d",
+      measurementId: "G-YQCV6ZL453"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
